--- a/Contents/Services/ServiceInfo.plist
+++ b/Contents/Services/ServiceInfo.plist
@@ -8,6 +8,7 @@
 			<dict>
 				<key>URLPatterns</key>
 				<array>
+					<string>^http://www.themoviedb.org/tv/.+/season/.+/episode/.+</string>
 					<string>^http://kickass.to/.+</string>
 					<string>^http://thepiratebay.se/torrent/.+</string>
 					<string>^http://yts.re/movie/.+</string>
